@@ -10,6 +10,7 @@
 * Fix - Lookup existing refunds by refund ID when processing webhooks.
 * Fix - Exclude Link from disable UPE confirmation modal in settings.
 * Fix - Fix JS (ES5) compatibility on older browsers for the shortcode checkout.
+* Fix - Unable to process 0 amount subscription.
 
 = 7.4.1 - 2023-05-30 =
 * Fix - Add Order Key Validation.
